the best practice

--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -11,13 +11,15 @@ events {
 #设定一个woker进程能处理的最大同时连接数,includes all connections (e.g. connections with proxied servers, among others), not only connections with clients.Another consideration is that the actual number of simultaneous connections cannot exceed the current limit on the maximum number of open files, which can be changed by worker_rlimit_nofile.
     worker_connections  65535;
 }
-#设置单个woker最大打开的文件数.
+#设置单个woker最大打开的文件数,确保这个数值大于woker_connections.
 worker_rlimit_nofile 65535;
-
-
+#生产环境下日志最好每个server{}配置独自的日志文件。PID会在安装的时候指定目录。
 http {
+	#定义文件的MIME类型。
     include       mime.types;
     default_type  application/octet-stream;
+	# Update charset_types due to updated mime.types
+  charset_types text/xml text/plain text/vnd.wap.wml application/x-javascript application/rss+xml text/css application/javascript application/json;
 
     log_format  main  '$remote_addr $remote_user [$time_local] "$request" '
         '$status $request_length $body_bytes_sent/$bytes_sent "$http_referer" '
@@ -30,28 +32,82 @@ http {
     log_format  mmwdlog  '$time_iso8601 $remote_addr $remote_user $connection "$cookie_openid" "$request" $request_length '
         '$status $body_bytes_sent $bytes_sent '
         '"$http_referer" "$http_x_forwarded_for" "$http_user_agent" $request_time $upstream_response_time';
-
+	#默认的日至文件，只有当虚拟主机中没有配置的时候才起作用，一般都配置到虚拟主机中。
     access_log  logs/access.log  main;
-
+	#开启高效文件传输模式，sendfile指令指定nginx是否调用sendfile函数来输出文件，对于普通应用设为 on，如果用来进行下载等应用磁盘IO重负载应用，可设置为off，以平衡磁盘与网络I/O处理速度，降低系统的负载。注意：如果图片显示不正常把这个改成off。
     sendfile        on;
+	#tcp_nopush = on 会设置调用tcp_cork方法，这个也是默认的，结果就是数据包不会马上传送出去，等到数据包最大时，一次性的传输出去，这样有助于解决网络堵塞。
     tcp_nopush      on;
-
+	#长链接的超时时间,HTTP1.1默认都是长链接。keep-alive.
     keepalive_timeout  300;
+	#开启gzip压缩，
     gzip  on;
-    gzip_types text/plain application/x-javascript text/css text/javascript;
-
+	# Compression level (1-9).
+    # 5 is a perfect compromise between size and cpu usage, offering about
+    # 75% reduction for most ascii files (almost identical to level 9).
+    gzip_comp_level    5;
+	#压缩的最小文件大小，低于这个大小的不被压缩，The length is determined only from the “Content-Length” response header field.
+	gzip_min_length    256;
+	# Compress data even for clients that are connecting to us via proxies,
+    # identified by the "Via" header (required for CloudFront).
+    gzip_proxied       any;
+	#被压缩的类型，默认值压缩text/html.
+	gzip_types
+    	application/atom+xml
+    	application/javascript
+    	application/json
+    	application/ld+json
+    	application/manifest+json
+    	application/rdf+xml
+    	application/rss+xml
+    	application/schema+json
+    	application/vnd.geo+json
+    	application/vnd.ms-fontobject
+    	application/x-font-ttf
+    	application/x-javascript
+    	application/x-web-app-manifest+json
+    	application/xhtml+xml
+    	application/xml
+    	font/eot
+    	font/opentype
+    	image/bmp
+    	image/svg+xml
+    	image/vnd.microsoft.icon
+    	image/x-icon
+    	text/cache-manifest
+    	text/css
+    	text/javascript
+    	text/plain
+    	text/vcard
+    	text/vnd.rim.location.xloc
+    	text/vtt
+    	text/x-component
+    	text/x-cross-domain-policy
+    	text/xml;
+	#不显示nginx版本信息，更安全。
     server_tokens off;
-
-    server_names_hash_bucket_size 128;
-    client_header_buffer_size 32k;
+	#设定server_name的长度大小，默认值为32或64，如果虚拟主机中server_name设定好多个，那么就需要设置这一项啦。
+    server_names_hash_bucket_size 128;	
+	#客户端请求头部的缓冲区大小，这个可以根据你的系统分页大小来设置，一般一个请求头的大小不会超过1k，不过由于一般系统分页都要大于1k，所以这里设置为分页大小。分页大小可以用命令getconf PAGESIZE 取得。
+	#[root@web001 ~]# getconf PAGESIZE 
+	#4096
+	#但也有client_header_buffer_size超过4k的情况，但是client_header_buffer_size该值必须设置为“系统分页大小”的整倍数。
+	client_header_buffer_size 32k;
+	#设定client请求的body最大值，特别是指请求头部的Content-Length，如果请求超过的话，返回413 (Request Entity Too Large）错误，但是浏览器无法处理显示这个错误，所以最好设置好。
     client_max_body_size 20m;
+	#定义读取client请求头部的超时时间，如果一个client未在指定时间内传完header，会返回408（Request Time-out）错误给客户端。
     client_header_timeout 60s;
+	#解释同上。
     client_body_timeout 60s;
+	#设定一个响应client的超时时间，超时设置只在两个连续的写操作，不是整个响应的传送，如果client在此时间内无收到任何东西，连接关闭。
      send_timeout 60s;
-
-    fastcgi_connect_timeout 50s;	
+	#指定连接到后端FastCGI的超时时间。
+    fastcgi_connect_timeout 50s;
+	#指定向FastCGI传送请求的超时时间，这个值是已经完成两次握手后向FastCGI传送请求的超时时间。	
     fastcgi_send_timeout 50s;
+	#指定接收FastCGI应答的超时时间，这个值是已经完成两次握手后接收FastCGI应答的超时时间。
     fastcgi_read_timeout 50s;
+	
 
 
 
