--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -29,15 +29,13 @@ http {
         '$status $body_bytes_sent $bytes_sent '
         '"$http_referer" "$http_x_forwarded_for" "$http_user_agent" $request_time $upstream_response_time';
 
-    log_format  mmwdlog  '$time_iso8601 $remote_addr $remote_user $connection "$cookie_openid" "$request" $request_length '
-        '$status $body_bytes_sent $bytes_sent '
-        '"$http_referer" "$http_x_forwarded_for" "$http_user_agent" $request_time $upstream_response_time';
 	#默认的日至文件，只有当虚拟主机中没有配置的时候才起作用，一般都配置到虚拟主机中。
     access_log  logs/access.log  main;
 	#开启高效文件传输模式，sendfile指令指定nginx是否调用sendfile函数来输出文件，对于普通应用设为 on，如果用来进行下载等应用磁盘IO重负载应用，可设置为off，以平衡磁盘与网络I/O处理速度，降低系统的负载。注意：如果图片显示不正常把这个改成off。
     sendfile        on;
 	#tcp_nopush = on 会设置调用tcp_cork方法，这个也是默认的，结果就是数据包不会马上传送出去，等到数据包最大时，一次性的传输出去，这样有助于解决网络堵塞。
     tcp_nopush      on;
+	#
 	#长链接的超时时间,HTTP1.1默认都是长链接。keep-alive.
     keepalive_timeout  300;
 	#开启gzip压缩，
@@ -46,11 +44,15 @@ http {
     # 5 is a perfect compromise between size and cpu usage, offering about
     # 75% reduction for most ascii files (almost identical to level 9).
     gzip_comp_level    5;
-	#压缩的最小文件大小，低于这个大小的不被压缩，The length is determined only from the “Content-Length” response header field.
-	gzip_min_length    256;
+	#压缩的最小文件大小，低于这个大小的不被压缩，The length is determined only from the “Content-Length” response header field.建议设置成大于1k的字节数，小于1k可能会越压越大。
+	gzip_min_length    1k;
+	#设置系统获取几个单位的缓存用于存储gzip的压缩结果数据流。4 16k代表以16k为单位，安装原始数据大小以16k为单位的4倍申请内存。
+	gzip_buffers 4 16k;
 	# Compress data even for clients that are connecting to us via proxies,
     # identified by the "Via" header (required for CloudFront).
     gzip_proxied       any;
+	#和http头有关系，加个vary头，给代理服务器用的，有的浏览器支持压缩，有的不支持，所以避免浪费不支持的也压缩，所以根据客户端的HTTP头来判断，是否需要压缩
+	gzip_vary on;
 	#被压缩的类型，默认值压缩text/html.
 	gzip_types
     	application/atom+xml
@@ -74,6 +76,9 @@ http {
     	image/svg+xml
     	image/vnd.microsoft.icon
     	image/x-icon
+		image/png
+        image/jpeg
+        image/gif
     	text/cache-manifest
     	text/css
     	text/javascript
