--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -35,7 +35,8 @@ http {
     sendfile        on;
 	#tcp_nopush = on 会设置调用tcp_cork方法，这个也是默认的，结果就是数据包不会马上传送出去，等到数据包最大时，一次性的传输出去，这样有助于解决网络堵塞。
     tcp_nopush      on;
-	#
+	#结论就是 sendfile on; 开启时，tcp_nopush 和 tcp_nodelay 都是on 是可以的。
+	tcp_nodelay on;
 	#长链接的超时时间,HTTP1.1默认都是长链接。keep-alive.
     keepalive_timeout  300;
 	#开启gzip压缩，
