--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -13,6 +13,24 @@ events {
 }
 #设置单个woker最大打开的文件数,确保这个数值大于woker_connections.
 worker_rlimit_nofile 65535;
+# 并发总数是 worker_processes 和 worker_connections 的乘积
+    # 即 max_clients = worker_processes * worker_connections
+    # 在设置了反向代理的情况下，max_clients = worker_processes * worker_connections / 4  为什么
+    # 为什么上面反向代理要除以4，应该说是一个经验值
+    # 根据以上条件，正常情况下的Nginx Server可以应付的最大连接数为：4 * 8000 = 32000
+    # worker_connections 值的设置跟物理内存大小有关
+    # 因为并发受IO约束，max_clients的值须小于系统可以打开的最大文件数
+    # 而系统可以打开的最大文件数和内存大小成正比，一般1GB内存的机器上可以打开的文件数大约是10万左右
+    # 我们来看看360M内存的VPS可以打开的文件句柄数是多少：
+    # $ cat /proc/sys/fs/file-max
+    # 输出 34336
+    # 32000 < 34336，即并发连接总数小于系统可以打开的文件句柄总数，这样就在操作系统可以承受的范围之内
+    # 所以，worker_connections 的值需根据 worker_processes 进程数目和系统可以打开的最大文件总数进行适当地进行设置
+    # 使得并发总数小于操作系统可以打开的最大文件数目
+    # 其实质也就是根据主机的物理CPU和内存进行配置
+    # 当然，理论上的并发总数可能会和实际有所偏差，因为主机还有其他的工作进程需要消耗系统资源。
+    # ulimit -SHn 65535
+
 #生产环境下日志最好每个server{}配置独自的日志文件。PID会在安装的时候指定目录。
 http {
 	#定义文件的MIME类型。
@@ -50,11 +68,11 @@ http {
 	#设置系统获取几个单位的缓存用于存储gzip的压缩结果数据流。4 16k代表以16k为单位，安装原始数据大小以16k为单位的4倍申请内存。
 	gzip_buffers 4 16k;
 	# Compress data even for clients that are connecting to us via proxies,
-    # identified by the "Via" header (required for CloudFront).
+    # identified by the "Via" header (required for CloudFront).Nginx做为反向代理的时候启用
     gzip_proxied       any;
 	#和http头有关系，加个vary头，给代理服务器用的，有的浏览器支持压缩，有的不支持，所以避免浪费不支持的也压缩，所以根据客户端的HTTP头来判断，是否需要压缩
 	gzip_vary on;
-	#被压缩的类型，默认值压缩text/html.
+	#被压缩的类型，默认值压缩text/html,纯文本的压缩效果明显,图片的压缩效果不明显,一般不压缩.
 	gzip_types
     	application/atom+xml
     	application/javascript
@@ -77,9 +95,6 @@ http {
     	image/svg+xml
     	image/vnd.microsoft.icon
     	image/x-icon
-		image/png
-        image/jpeg
-        image/gif
     	text/cache-manifest
     	text/css
     	text/javascript
@@ -113,7 +128,38 @@ http {
     fastcgi_send_timeout 50s;
 	#指定接收FastCGI应答的超时时间，这个值是已经完成两次握手后接收FastCGI应答的超时时间。
     fastcgi_read_timeout 50s;
+
+	#虚拟主机配置文件最好放在单独的一个conf.d目录下并且以服务的名称命名,这样方便管理,下面一个实例.
+	include /home/test/nginx/conf.d/*.conf;
 	
+	server {
+		#监听端口
+        listen 80;
+		#域名设定,多个用空格隔开.
+        server_name www.1987.name 1987.name;
+		#定义日志位置.
+        access_log /home/test/nginx/logs/access.log main;
+        error_log /home/test/nginx/logs/error.log;
+		#定义默认根目录.
+        root /data/www;
+		#定义首页索引文件的名称.
+        index index.html index.htm index.php;
+        #域名重定向,有好多办法,这里只是其中一种,回头做个专题,写个文档.
+		rewrite ^(.*) http://www.fengmiapp.com/?from=nowww permanent;
+  		#设置这些文件在浏览器本地缓存30天，可以提高下次打开我博客的页面加载速度。
+        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf)$ {
+                expires 30d;
+        }
+		#设置样式文件在本地浏览器缓存时间为1点，也是为了提高下一次的访问速度。
+        location ~ .*\.(js|css)$ { 
+                expires 1d;
+        }
+       
+
+			}
+
+}
+		
 
 
 
