--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -133,9 +133,9 @@ http {
 	include /home/test/nginx/conf.d/*.conf;
 	
 	server {
-		#监听端口
+		#监听端口,监听端口，默认80，小于1024的要以root启动。
         listen 80;
-		#域名设定,多个用空格隔开.
+		#域名设定,多个用空格隔开.可以通过正则匹配.
         server_name www.1987.name 1987.name;
 		#定义日志位置.
         access_log /home/test/nginx/logs/access.log main;
