--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -158,6 +158,19 @@ http {
 
 			}
 
+
+	#http强制转换成https.
+	server{
+		listen 80;
+		server_name www.test.com;
+		#方法一
+		return 301 https://$host$request_uri;
+		#方法二
+		rewrite ^/(.*) https://$host/$1 permanent;
+			}
+
+
+
 }
 		
 
