change some my.cnf

--- a/configuration/my.cnf
+++ b/configuration/my.cnf
@@ -1,12 +1,11 @@
 [client]
 port		= 3306
-socket		= /home/test/mysql_master/mysql.sock
+socket		= /home/test/mysql/mysql.sock
 default-character-set = utf8mb4
 # The MySQL server
 [mysqld]
-!include /etc/mysqld.cnf
 port        = 3306
-socket      = /home/test/mysql_master/mysql.sock
+socket      = /home/test/mysql/mysql.sock
 skip-external-locking
 log-warnings  = 2
 log-error = /home/test/mysql_master/log/mysql.err
