--- a/configuration/ss_conf/pdnsd.conf
+++ b/configuration/ss_conf/pdnsd.conf
@@ -26,7 +26,7 @@ server {
 	port = 53;     # 填写DNS的端口
 	timeout=5;         # 超时值，酌情修改
 	uptest=query;       # 进行可用性检查，none=不检查，query代表发送DNS请求的方式
-    query_test_name="."  #结合uptest使用,请求根域名解析来检查上游的可用性
+    query_test_name=".";  #结合uptest使用,请求根域名解析来检查上游的可用性
 	caching=on;
     purge_cache=off;   # 如果off，pdnsd不会主动清除缓存中过期的项目 除非缓存满了
     edns_query=on;    # 是否使用edns
