--- a/configuration/shadowsocks/etc/dnsmasq.conf
+++ b/configuration/shadowsocks/etc/dnsmasq.conf
@@ -1,3 +1,12 @@
+conf-dir=/etc/dnsmasq.d
+no-resolv
+cache-size=8500
+
+
+
+
+
+
 #监听端口,默认是53,可以自己修改
 #port=5353
 
@@ -9,14 +18,14 @@
 
 #如果不想使用任何文件当做DNS上有服务器,去掉注释即可,如果使用ChinaDNS当做dnsmasq上游的话只配置
 #no-resolv, server=127.0.0.1#5353,cache-size=8500即可 
-no-resolv
+#no-resolv
 
 
 #给域名指定DNS服务器
-server=/baidu.com/114.114.114.114
-server=/google.com/118.193.81.214#5353
+#server=/baidu.com/114.114.114.114
+#server=/google.com/118.193.81.214#5353
 
-server=127.0.0.1#5353 #所有的DNS查询都转发到上游
+#server=127.0.0.1#5353 #所有的DNS查询都转发到上游
 
 #强制解析,这里就是指DNS劫持,把所有baidu.com以及它的子域名都解析到127.0.0.1路由器上,当然也可以制定自己的IP来实现劫持
 #address=/baidu.com/127.0.0.1
@@ -26,17 +35,17 @@ server=127.0.0.1#5353 #所有的DNS查询都转发到上游
 #比如 ipset create myipset hash:ip
 #ipset=/baidu.com/google.com/myipset,newset
 
-listen-address=192.168.1.1,127.0.0.1
+#listen-address=192.168.1.1,127.0.0.1
 
 #DHCP地址分配范围和租约时间
-dhcp-range=192.168.1.100,192.168.1.150,12h
+#dhcp-range=192.168.1.100,192.168.1.150,12h
 
 #固定分配IP地址,IP/Mac绑定
 #dhcp-host=11:22:33:44:55:66,192.168.0.60
 
 
 # 缓存大小
-cache-size=8500
+#cache-size=8500
 
 
 # Include all files in a directory which end in .conf
