--- a/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
+++ b/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
@@ -1,1 +1,137 @@
-server=/#/127.0.0.1#3210
+server=/#/118.193.81.214#5301
+
+#Google and Youtube
+server=/.google.com/208.67.222.222#443
+server=/.google.com.hk/208.67.222.222#443
+server=/.gstatic.com/208.67.222.222#443
+server=/.ggpht.com/208.67.222.222#443
+server=/.google.com/208.67.222.222#443
+server=/.google.com.hk/208.67.222.222#443
+server=/.gstatic.com/208.67.222.222#443
+server=/.ggpht.com/208.67.222.222#443
+server=/.googleusercontent.com/208.67.222.222#443
+server=/.appspot.com/208.67.222.222#443
+server=/.googlecode.com/208.67.222.222#443
+server=/.googleapis.com/208.67.222.222#443
+server=/.gmail.com/208.67.222.222#443
+server=/.google-analytics.com/208.67.222.222#443
+server=/.youtube.com/208.67.222.222#443
+server=/.googlevideo.com/208.67.222.222#443
+server=/.youtube-nocookie.com/208.67.222.222#443
+server=/.ytimg.com/208.67.222.222#443
+server=/.blogspot.com/208.67.222.222#443
+server=/.blogger.com/208.67.222.222#443
+server=/.google.co.jp/208.67.222.222#443
+server=/.google.co.uk/208.67.222.222#443
+
+#FaceBook
+server=/.facebook.com/208.67.222.222#443
+server=/.thefacebook.com/208.67.222.222#443
+server=/.facebook.net/208.67.222.222#443
+server=/.fbcdn.net/208.67.222.222#443
+server=/.akamaihd.net/208.67.222.222#443
+
+#Twitter
+server=/.twitter.com/208.67.222.222#443
+server=/.t.co/208.67.222.222#443
+server=/.bitly.com/208.67.222.222#443
+server=/.twimg.com/208.67.222.222#443
+server=/.tinypic.com/208.67.222.222#443
+server=/.yfrog.com/208.67.222.222#443
+
+#Dropbox
+server=/.dropbox.com/208.67.222.222#443
+
+#1024
+server=/.t66y.com/208.67.222.222#443
+
+#shadowsocks.org
+server=/.shadowsocks.org/208.67.222.222#443
+
+#btdigg
+server=/.btdigg.org/208.67.222.222#443
+
+#sf.net
+server=/.sourceforge.net/208.67.222.222#443
+
+#feedly
+server=/.feedly.com/208.67.222.222#443
+
+#github and fastly
+server=/.github.com/208.67.222.222#443
+server=/.fastly.com/208.67.222.222#443
+
+#wikipedia
+server=/.wikipedia.org/208.67.222.222#443
+server=/.wikimedia.org/208.67.222.222#443
+server=/.wiktionary.org/208.67.222.222#443
+
+#xda
+server=/.xda-developers.com/208.67.222.222#443
+
+# Here Comes The ipset
+
+#Google and Youtube
+ipset=/.google.com/setmefree
+ipset=/.google.com.hk/setmefree
+ipset=/.gstatic.com/setmefree
+ipset=/.ggpht.com/setmefree
+ipset=/.googleusercontent.com/setmefree
+ipset=/.appspot.com/setmefree
+ipset=/.googlecode.com/setmefree
+ipset=/.googleapis.com/setmefree
+ipset=/.gmail.com/setmefree
+ipset=/.google-analytics.com/setmefree
+ipset=/.youtube.com/setmefree
+ipset=/.googlevideo.com/setmefree
+ipset=/.youtube-nocookie.com/setmefree
+ipset=/.ytimg.com/setmefree
+ipset=/.blogspot.com/setmefree
+ipset=/.blogger.com/setmefree
+ipset=/.google.co.jp/setmefree
+ipset=/.google.co.uk/setmefree
+
+#FaceBook
+ipset=/.facebook.com/setmefree
+ipset=/.thefacebook.com/setmefree
+ipset=/.facebook.net/setmefree
+ipset=/.fbcdn.net/setmefree
+ipset=/.akamaihd.net/setmefree
+
+#Twitter
+ipset=/.twitter.com/setmefree
+ipset=/.t.co/setmefree
+ipset=/.bitly.com/setmefree
+ipset=/.twimg.com/setmefree
+ipset=/.tinypic.com/setmefree
+ipset=/.yfrog.com/setmefree
+
+#Dropbox
+ipset=/.dropbox.com/setmefree
+
+#1024
+ipset=/.t66y.com/setmefree
+
+#shadowsocks.org
+ipset=/.shadowsocks.org/setmefree
+
+#btdigg
+ipset=/.btdigg.org/setmefree
+
+#sf.net
+ipset=/.sourceforge.net/setmefree
+
+#feedly
+ipset=/.feedly.com/setmefree
+
+#github&fastly
+ipset=/.github.com/setmefree
+ipset=/.fastly.com/setmefree
+
+#wikipedia
+ipset=/.wikipedia.org/setmefree
+ipset=/.wikimedia.org/setmefree
+ipset=/.wiktionary.org/setmefree
+
+#xda
+ipset=/.xda-developers.com/setmefree
