--- a/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
+++ b/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
@@ -72,66 +72,64 @@ server=/.xda-developers.com/208.67.222.222#443
 # Here Comes The ipset
 
 #Google and Youtube
-ipset=/.google.com/setmefree
-ipset=/.google.com.hk/setmefree
-ipset=/.gstatic.com/setmefree
-ipset=/.ggpht.com/setmefree
-ipset=/.googleusercontent.com/setmefree
-ipset=/.appspot.com/setmefree
-ipset=/.googlecode.com/setmefree
-ipset=/.googleapis.com/setmefree
-ipset=/.gmail.com/setmefree
-ipset=/.google-analytics.com/setmefree
-ipset=/.youtube.com/setmefree
-ipset=/.googlevideo.com/setmefree
-ipset=/.youtube-nocookie.com/setmefree
-ipset=/.ytimg.com/setmefree
-ipset=/.blogspot.com/setmefree
-ipset=/.blogger.com/setmefree
-ipset=/.google.co.jp/setmefree
-ipset=/.google.co.uk/setmefree
+ipset=/.google.com/gfwlist
+ipset=/.google.com.hk/gfwlist
+ipset=/.gstatic.com/gfwlist
+ipset=/.ggpht.com/gfwlist
+ipset=/.googleusercontent.com/gfwlist
+ipset=/.appspot.com/gfwlist
+ipset=/.googlecode.com/gfwlist
+ipset=/.googleapis.com/gfwlist
+ipset=/.gmail.com/gfwlist
+ipset=/.google-analytics.com/gfwlist
+ipset=/.youtube.com/gfwlist
+ipset=/.googlevideo.com/gfwlist
+ipset=/.youtube-nocookie.com/gfwlist
+ipset=/.ytimg.com/gfwlist
+ipset=/.blogspot.com/gfwlist
+ipset=/.blogger.com/gfwlist
+ipset=/.google.co.jp/gfwlist
+ipset=/.google.co.uk/gfwlist
 
 #FaceBook
-ipset=/.facebook.com/setmefree
-ipset=/.thefacebook.com/setmefree
-ipset=/.facebook.net/setmefree
-ipset=/.fbcdn.net/setmefree
-ipset=/.akamaihd.net/setmefree
+ipset=/.facebook.com/gfwlist
+ipset=/.thefacebook.com/gfwlist
+ipset=/.facebook.net/gfwlist
+ipset=/.fbcdn.net/gfwlist
+ipset=/.akamaihd.net/gfwlist
 
 #Twitter
-ipset=/.twitter.com/setmefree
-ipset=/.t.co/setmefree
-ipset=/.bitly.com/setmefree
-ipset=/.twimg.com/setmefree
-ipset=/.tinypic.com/setmefree
-ipset=/.yfrog.com/setmefree
+ipset=/.twitter.com/gfwlist
+ipset=/.t.co/gfwlist
+ipset=/.bitly.com/gfwlist
+ipset=/.twimg.com/gfwlist
+ipset=/.tinypic.com/gfwlist
+ipset=/.yfrog.com/gfwlist
 
 #Dropbox
-ipset=/.dropbox.com/setmefree
+ipset=/.dropbox.com/gfwlist
 
 #1024
-ipset=/.t66y.com/setmefree
+ipset=/.t66y.com/gfwlist
 
 #shadowsocks.org
-ipset=/.shadowsocks.org/setmefree
+ipset=/.shadowsocks.org/gfwlist
 
 #btdigg
-ipset=/.btdigg.org/setmefree
+ipset=/.btdigg.org/gfwlist
 
 #sf.net
-ipset=/.sourceforge.net/setmefree
+ipset=/.sourceforge.net/gfwlist
 
 #feedly
-ipset=/.feedly.com/setmefree
+ipset=/.feedly.com/gfwlist
 
 #github&fastly
-ipset=/.github.com/setmefree
-ipset=/.fastly.com/setmefree
+ipset=/.github.com/gfwlist
+ipset=/.fastly.com/gfwlist
 
 #wikipedia
-ipset=/.wikipedia.org/setmefree
-ipset=/.wikimedia.org/setmefree
-ipset=/.wiktionary.org/setmefree
+ipset=/.wikipedia.org/gfwlist
+ipset=/.wikimedia.org/gfwlist
+ipset=/.wiktionary.org/gfwlist
 
-#xda
-ipset=/.xda-developers.com/setmefree
