--- a/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
+++ b/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
@@ -1,103 +1,10 @@
 server=/#/127.0.0.1#3210
 
-#Google and Youtube
-server=/.google.com/208.67.222.222#443
-server=/.google.com.hk/208.67.222.222#443
-server=/.gstatic.com/208.67.222.222#443
-server=/.ggpht.com/208.67.222.222#443
-server=/.google.com/208.67.222.222#443
-server=/.google.com.hk/208.67.222.222#443
-server=/.gstatic.com/208.67.222.222#443
-server=/.ggpht.com/208.67.222.222#443
-server=/.googleusercontent.com/208.67.222.222#443
-server=/.appspot.com/208.67.222.222#443
-server=/.googlecode.com/208.67.222.222#443
-server=/.googleapis.com/208.67.222.222#443
-server=/.gmail.com/208.67.222.222#443
-server=/.google-analytics.com/208.67.222.222#443
-server=/.youtube.com/208.67.222.222#443
-server=/.googlevideo.com/208.67.222.222#443
-server=/.youtube-nocookie.com/208.67.222.222#443
-server=/.ytimg.com/208.67.222.222#443
-server=/.blogspot.com/208.67.222.222#443
-server=/.blogger.com/208.67.222.222#443
-server=/.google.co.jp/208.67.222.222#443
-server=/.google.co.uk/208.67.222.222#443
-
-#FaceBook
-server=/.facebook.com/208.67.222.222#443
-server=/.thefacebook.com/208.67.222.222#443
-server=/.facebook.net/208.67.222.222#443
-server=/.fbcdn.net/208.67.222.222#443
-server=/.akamaihd.net/208.67.222.222#443
-
-#Twitter
-server=/.twitter.com/208.67.222.222#443
-server=/.t.co/208.67.222.222#443
-server=/.bitly.com/208.67.222.222#443
-server=/.twimg.com/208.67.222.222#443
-server=/.tinypic.com/208.67.222.222#443
-server=/.yfrog.com/208.67.222.222#443
-
-#shadowsocks.org
-server=/.shadowsocks.org/208.67.222.222#443
-
-
-#github and fastly
-server=/.github.com/208.67.222.222#443
-server=/.fastly.com/208.67.222.222#443
-
-#wikipedia
-server=/.wikipedia.org/208.67.222.222#443
-server=/.wikimedia.org/208.67.222.222#443
-server=/.wiktionary.org/208.67.222.222#443
-
-# Here Comes The ipset
-
-#Google and Youtube
+#Google
 ipset=/.google.com/gfwlist
-ipset=/.google.com.hk/gfwlist
-ipset=/.gstatic.com/gfwlist
-ipset=/.ggpht.com/gfwlist
-ipset=/.googleusercontent.com/gfwlist
-ipset=/.appspot.com/gfwlist
-ipset=/.googlecode.com/gfwlist
-ipset=/.googleapis.com/gfwlist
-ipset=/.gmail.com/gfwlist
-ipset=/.google-analytics.com/gfwlist
 ipset=/.youtube.com/gfwlist
-ipset=/.googlevideo.com/gfwlist
-ipset=/.youtube-nocookie.com/gfwlist
-ipset=/.ytimg.com/gfwlist
-ipset=/.blogspot.com/gfwlist
-ipset=/.blogger.com/gfwlist
-ipset=/.google.co.jp/gfwlist
-ipset=/.google.co.uk/gfwlist
-
-#FaceBook
-ipset=/.facebook.com/gfwlist
-ipset=/.thefacebook.com/gfwlist
-ipset=/.facebook.net/gfwlist
-ipset=/.fbcdn.net/gfwlist
-ipset=/.akamaihd.net/gfwlist
-
-#Twitter
-ipset=/.twitter.com/gfwlist
-ipset=/.t.co/gfwlist
-ipset=/.bitly.com/gfwlist
-ipset=/.twimg.com/gfwlist
-ipset=/.tinypic.com/gfwlist
-ipset=/.yfrog.com/gfwlist
-
-#shadowsocks.org
-ipset=/.shadowsocks.org/gfwlist
-
-#github&fastly
+ipset=/.googleusercontent.com/gfwlist
+#Github
 ipset=/.github.com/gfwlist
-ipset=/.fastly.com/gfwlist
-
-#wikipedia
-ipset=/.wikipedia.org/gfwlist
-ipset=/.wikimedia.org/gfwlist
-ipset=/.wiktionary.org/gfwlist
+ipset=/.githubusercontent.com/gfwlist
 
