--- a/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
+++ b/configuration/shadowsocks/etc/dnsmasq.d/gfwlist.conf
@@ -7,4 +7,5 @@ ipset=/.googleusercontent.com/gfwlist
 #Github
 ipset=/.github.com/gfwlist
 ipset=/.githubusercontent.com/gfwlist
+ipset=/.fastly.net/gfwlist
 
