add nginx script

--- a/configuration/nginx.conf
+++ b/configuration/nginx.conf
@@ -10,6 +10,7 @@ events {
     use epoll;
 #设定一个woker进程能处理的最大同时连接数,includes all connections (e.g. connections with proxied servers, among others), not only connections with clients.Another consideration is that the actual number of simultaneous connections cannot exceed the current limit on the maximum number of open files, which can be changed by worker_rlimit_nofile.
     worker_connections  65535;
+    multi_accept on;
 }
 #设置单个woker最大打开的文件数,确保这个数值大于woker_connections.
 worker_rlimit_nofile 65535;
