--- a/configuration/sysctl.conf
+++ b/configuration/sysctl.conf
@@ -27,13 +27,6 @@ net.ipv4.ip_forward = 0
 net.ipv4.conf.all.rp_filter = 0
 net.ipv4.conf.default.rp_filter = 0
 
-##启用有选择的应答（Selective Acknowledgment），
-#这可以通过有选择地应答乱序接收到的报文来提高性能（这样可以让发送者只发送丢失的报文段）；
-#（对于广域网通信来说）这个选项应该启用，但是这会增加对 CPU 的占用。 
-net.ipv4.tcp_sack = 0
-net.ipv4.tcp_dsack = 0
-net.ipv4.tcp_fack = 0
-
 #当出现SYN等待队列溢出时，启用cookies来处理，可防范少量SYN攻击
 net.ipv4.tcp_syncookies = 1
 #对于一个新建连接，内核要发送多少个SYN连接请求才决定放弃
@@ -41,14 +34,9 @@ net.ipv4.tcp_syn_retries = 3
 net.ipv4.tcp_synack_retries = 3
 #对于那些依然还未获得客户端确认的连接请求﹐需要保存在队列中最大数目。
 net.ipv4.tcp_max_syn_backlog = 16384
+#在每个网络接口接收数据包的速率比内核处理这些包的速率快时，允许送到队列的数据包的最大数目
+net.core.netdev_max_backlog = 16384
 
-# Enables IP source routing
-net.ipv4.conf.all.send_redirects = 1
-net.ipv4.conf.default.send_redirects = 1
-net.ipv4.conf.all.accept_source_route = 1
-net.ipv4.conf.default.accept_source_route = 1
-# net.ipv6.conf.all.accept_source_route = 1
-# net.ipv6.conf.default.accept_source_route = 1
 
 # Controls the System Request debugging functionality of the kernel
 kernel.sysrq = 0
@@ -97,30 +85,19 @@ net.core.netdev_max_backlog = 262144
 # net.core.rmem_default = 16777216
 # net.core.optmem_max = 2048000
 net.core.rmem_max = 108544
-net.core.somaxconn = 262144
+#定义了系统中每一个端口最大的监听队列的长度，这是个全局的参数
+net.core.somaxconn = 65535
 net.core.wmem_max = 108544
-net.netfilter.nf_conntrack_max = 10000000
-net.netfilter.nf_conntrack_tcp_timeout_established = 40
-net.netfilter.nf_conntrack_tcp_timeout_close = 10
-net.netfilter.nf_conntrack_tcp_timeout_close_wait = 10
-net.netfilter.nf_conntrack_tcp_timeout_fin_wait = 10
-net.netfilter.nf_conntrack_tcp_timeout_last_ack = 10
-net.netfilter.nf_conntrack_tcp_timeout_syn_recv = 10
-net.netfilter.nf_conntrack_tcp_timeout_syn_sent = 10
-net.netfilter.nf_conntrack_tcp_timeout_time_wait = 10
-net.ipv4.tcp_fin_timeout = 32
-net.ipv4.tcp_max_orphans = 262144
-net.ipv4.tcp_timestamps = 0
 
 # tuning TCP for web pdf
 net.ipv4.tcp_rmem = 4096 65536 16777216
 net.ipv4.tcp_wmem = 4096 16384 16777216
+#表示开启TCP连接中TIME_WAIT套接字的快速回收
+net.ipv4.tcp_tw_recycle = 1
+#表示允许重用TIME_WAIT状态的套接字用于新的TCP连接
 net.ipv4.tcp_tw_reuse = 1
-net.ipv4.tcp_max_tw_buckets = 13107200
-
-# Increase TCP queue length
-net.ipv4.neigh.default.proxy_qlen = 96
-net.ipv4.neigh.default.unres_qlen = 6
+#系统在同时所处理的最大 timewait sockets 数目
+net.ipv4.tcp_max_tw_buckets = 8192
 
 # Do a 'modprobe tcp_cubic' first
 net.ipv4.tcp_congestion_control = cubic
@@ -129,30 +106,12 @@ net.ipv4.tcp_congestion_control = cubic
 net.ipv4.tcp_no_metrics_save = 0
 net.ipv4.tcp_moderate_rcvbuf = 0
 
-# Enable a fix for RFC1337 - time-wait assassination hazards in TCP
-net.ipv4.tcp_rfc1337 = 1
-
-# UDP parameters
-net.ipv4.udp_mem = 65536 173800 419430
-net.ipv4.udp_rmem_min = 65536
-net.ipv4.udp_wmem_min = 65536
-
 # Enable ignoring broadcasts request
 net.ipv4.icmp_echo_ignore_broadcasts = 1
 
 # Enable bad error message Protection
 net.ipv4.icmp_ignore_bogus_error_responses = 1
 
-# Enable ICMP Redirect Acceptance
-net.ipv4.conf.all.accept_redirects = 1
-net.ipv4.conf.default.accept_redirects = 1
 
 
-# Disable Log Spoofed Packets, Source Routed Packets, Redirect Packets
-net.ipv4.conf.all.log_martians = 0
-net.ipv4.conf.default.log_martians = 0
 
-
-# This will ensure that immediately subsequent connections use the new values
-net.ipv4.route.flush = 1
-# net.ipv6.route.flush = 1
